[package]
name = "bomerge"
version = "0.1.0"
authors = ["Daniele Basile <asterix24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
calamine = "0.16.1"
regex = "1"
lazy_static = "1.2.0"
num-traits = "0.2.12"
xlsxwriter = "0.3.2"
